# Fashion_Bot

./: .env.example  .gitignore  LICENSE  README.md  RECOMMENDER_MVP_WALKTHROUGH.md  RECOMMENDER_PIPELINE.md  RETRIEVAL_V2_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt
QA/data/: url_list.json
QA/scripts/: build_db.py  process_for_rag.py  query_answer.py  web_scraping.py
app/: dependencies.py  main.py
app/routes/: qa.py  recommend.py  wardrobe.py
app/static/: app.js  index.html  styles.css
data/sample/: sample_user_queries.json
eval/: compare_outputs.py  compare_sparse_vs_dense.py  judge_retrieval_outputs.py  judge_retrieval_run.py  run_benchmark.py  run_retrieval_eval.py
eval/qa_eval/: evaluation_qa.py  overview.md
eval/recommender_eval/: EVAL_GUIDANCE.md  QUALITATIVE_EVAL_GUIDE.md  QUALITATIVE_REPORT.md  benchmark_queries.json  judge_retrieval_run.py  queries_dense_eval.txt  queries_eval_10_mens.txt  queries_wardrobe_eval_demo_user.json  rubric.md  run_quant_suite.py  run_retrieval_eval.py
eval/results/: benchmark_results_20260501T183615Z.json  compare_results_20260505_204117.json  deterministic_baseline.json
scripts/: build_catalog.py  build_catalog_embeddings.py  build_demo_image_subset.py  build_rag_index.py  check_catalog_embeddings_db.py  ingest_demo_wardrobe.py  qa_answer.py  qa_build_db.py  run_api.py  test_recommender.py
src/: __init__.py
src/database/: __init__.py  item_store.py  vector_store.py  wardrobe_store.py
src/rag/: __init__.py  (+5 more)
tests/: test_api.py  test_catalog_preprocessing.py  test_rag.py  test_recommender.py
(+182 files in other folders)
