[project]
name = "fashion-bot"
version = "0.1.0"
description = "Fashion assistant with QA RAG and outfit recommendation systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "google-cloud-aiplatform>=1.70.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
